[package]
name = "tarkovdata-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.25"
directories = "4.0.1"
serde_json = "1.0.73"
cached = "0.26.2"
once_cell = "1.9.0"

[dependencies.serde]
version = "1.0.132"
features = ["derive"]

[dependencies.xxhash-rust]
version = "0.8.2"
default-features = false
features = ["xxh3"]